--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -4824,7 +4824,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               </button></span
                                             >
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
@@ -5050,7 +5050,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               </button></span
                                             >
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
@@ -10573,7 +10573,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                             </button></span
                                           >
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a
@@ -10796,7 +10796,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                             </button></span
                                           >
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a
