--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -6058,7 +6058,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -6170,7 +6170,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -15824,7 +15824,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
@@ -15936,7 +15936,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
