--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1099,7 +1099,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
@@ -1269,7 +1269,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
