--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -4101,7 +4101,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb" class="footer__social-link">
@@ -4238,7 +4238,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb" class="footer__social-link">
