--- a/account/forgot_password.html
+++ b/account/forgot_password.html
@@ -655,7 +655,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -836,7 +836,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
