--- a/account/login-security.html
+++ b/account/login-security.html
@@ -3033,7 +3033,7 @@
                                     </button>
                                   </span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -3272,7 +3272,7 @@
                                     </button>
                                   </span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
