--- a/account/privacy-and-sharing.html
+++ b/account/privacy-and-sharing.html
@@ -1664,7 +1664,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -1845,7 +1845,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
