--- a/account/professional-hosting.html
+++ b/account/professional-hosting.html
@@ -1182,7 +1182,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -1363,7 +1363,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
