--- a/account/profile.html
+++ b/account/profile.html
@@ -2838,7 +2838,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -3019,7 +3019,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
