--- a/help/help.html
+++ b/help/help.html
@@ -6070,7 +6070,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -6240,7 +6240,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
