--- a/help/host-liability-insurance.html
+++ b/help/host-liability-insurance.html
@@ -866,7 +866,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -1060,7 +1060,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
