--- a/help/searching-and-booking.html
+++ b/help/searching-and-booking.html
@@ -774,7 +774,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -968,7 +968,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
