--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -1130,7 +1130,7 @@
                                   class="page-shell-mobile__lang-text">PHP</span>
                               </button></span>
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb"
@@ -1233,7 +1233,7 @@
                                   class="page-shell-mobile__lang-text">PHP</span>
                               </button></span>
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb"
