--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1077,7 +1077,7 @@
                               class="page-shell-mobile__lang-text">PHP</span>
                           </button></span>
                       </div>
-                      <div class="footer__social-ml-32">
+                      <div class="ml-8">
                         <ul class="footer__social">
                           <li class="footer__social-item">
                             <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb"
@@ -1182,7 +1182,7 @@
                               class="page-shell-mobile__lang-text">PHP</span>
                           </button></span>
                       </div>
-                      <div class="footer__social-ml-32">
+                      <div class="ml-8">
                         <ul class="footer__social">
                           <li class="footer__social-item">
                             <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb"
