--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -1508,7 +1508,7 @@
                     </button></span
                   >
                 </div>
-                <div class="footer__social-ml-32">
+                <div class="ml-8">
                   <ul class="footer__social">
                     <li class="footer__social-item">
                       <a
@@ -1671,7 +1671,7 @@
                     </button></span
                   >
                 </div>
-                <div class="footer__social-ml-32">
+                <div class="ml-8">
                   <ul class="footer__social">
                     <li class="footer__social-item">
                       <a
