--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -24667,7 +24667,7 @@
                                       <span class="text-highlight dir dir-ltr">Choose a currency</span><span class="mr-2"><span class="font-semibold">₱</span></span><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb" class="footer__social-link"><svg viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Navigate to Facebook" focusable="false" style="
@@ -24737,7 +24737,7 @@
                                       <span class="text-highlight dir dir-ltr">Choose a currency</span><span class="mr-2"><span class="font-semibold">₱</span></span><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/airbnb" class="footer__social-link"><svg viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Navigate to Facebook" focusable="false" style="
