--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -2747,7 +2747,7 @@
                     </button></span
                   >
                 </div>
-                <div class="footer__social-ml-32">
+                <div class="ml-8">
                   <ul class="footer__social">
                     <li class="footer__social-item">
                       <a
@@ -2910,7 +2910,7 @@
                     </button></span
                   >
                 </div>
-                <div class="footer__social-ml-32">
+                <div class="ml-8">
                   <ul class="footer__social">
                     <li class="footer__social-item">
                       <a
