--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -2962,7 +2962,7 @@ Harlem, New York City"
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -3156,7 +3156,7 @@ Harlem, New York City"
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
