--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -17266,7 +17266,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -17447,7 +17447,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
