--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5047,7 +5047,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -5157,7 +5157,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -14026,7 +14026,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
@@ -14136,7 +14136,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
