--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -4489,7 +4489,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -4599,7 +4599,7 @@
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a rel="noopener noreferrer" target="_blank"
@@ -15986,7 +15986,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
@@ -16096,7 +16096,7 @@
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
                                       </div>
-                                      <div class="footer__social-ml-32">
+                                      <div class="ml-8">
                                         <ul class="footer__social">
                                           <li class="footer__social-item">
                                             <a rel="noopener noreferrer" target="_blank"
