--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -1705,7 +1705,7 @@
                                     </button>
                                   </span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -1944,7 +1944,7 @@
                                     </button>
                                   </span>
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
