--- a/loaders/help-loader.html
+++ b/loaders/help-loader.html
@@ -714,7 +714,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -884,7 +884,7 @@
                                 </button></span
                               >
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
