--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -1706,7 +1706,7 @@
                                               </button></span
                                             >
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
@@ -1932,7 +1932,7 @@
                                               </button></span
                                             >
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
@@ -4638,7 +4638,7 @@
                                             </button></span
                                           >
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a
@@ -4861,7 +4861,7 @@
                                             </button></span
                                           >
                                         </div>
-                                        <div class="footer__social-ml-32">
+                                        <div class="ml-8">
                                           <ul class="footer__social">
                                             <li class="footer__social-item">
                                               <a
