--- a/online-experience/experiences.html
+++ b/online-experience/experiences.html
@@ -1096,7 +1096,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
@@ -1266,7 +1266,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
