--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3442,7 +3442,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
@@ -3621,7 +3621,7 @@
                               </button></span
                             >
                           </div>
-                          <div class="footer__social-ml-32">
+                          <div class="ml-8">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
