--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2960,7 +2960,7 @@
                                                 </button>
                                               </span>
                                             </div>
-                                            <div class="footer__social-ml-32">
+                                            <div class="ml-8">
                                               <ul class="footer__social">
                                                 <li class="footer__social-item">
                                                   <a
@@ -3231,7 +3231,7 @@
                                                 </button>
                                               </span>
                                             </div>
-                                            <div class="footer__social-ml-32">
+                                            <div class="ml-8">
                                               <ul class="footer__social">
                                                 <li class="footer__social-item">
                                                   <a
@@ -7010,7 +7010,7 @@
                                               </button>
                                             </span>
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
@@ -7279,7 +7279,7 @@
                                               </button>
                                             </span>
                                           </div>
-                                          <div class="footer__social-ml-32">
+                                          <div class="ml-8">
                                             <ul class="footer__social">
                                               <li class="footer__social-item">
                                                 <a
