--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -1428,7 +1428,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
@@ -1609,7 +1609,7 @@
                                     </button></span
                                   >
                                 </div>
-                                <div class="footer__social-ml-32">
+                                <div class="ml-8">
                                   <ul class="footer__social">
                                     <li class="footer__social-item">
                                       <a
