--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1959,7 +1959,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -2184,7 +2184,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
