--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1797,7 +1797,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
@@ -2022,7 +2022,7 @@
                                 </button>
                               </span>
                             </div>
-                            <div class="footer__social-ml-32">
+                            <div class="ml-8">
                               <ul class="footer__social">
                                 <li class="footer__social-item">
                                   <a
