--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -296,7 +296,7 @@
                                   <div class="inline-block">
                                     <nav aria-label="breadcrumb">
                                       <div class="flex">
-                                        <div class="_rqfxvmb">
+                                        <div class="flex-item">
                                           <div style="margin-right: 8.8px">
                                             <svg
                                               viewBox="0 0 24 24"
@@ -317,7 +317,7 @@
                                             </svg>
                                           </div>
                                         </div>
-                                        <div class="_rqfxvmb">
+                                        <div class="flex-item">
                                           <div>
                                             <span class="_121z06r2"
                                               ><a href="/help" class="text-link"
