--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -6835,7 +6835,7 @@
                         <div class="_fo8j1u0">
                           <button type="button" class="_ft1uei">
                           <span class="_7u66d2">
-                            <span class="_r16tng">Show map</span>
+                            <span class="flex-item">Show map</span>
                             <div class="_hqsu3j">
                             <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: rgb(255, 255, 255);">
                               <path
