--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1011,7 +1011,7 @@
                 <span class="text-highlight dir dir-ltr">Footer section</span>
                 <section>
                   <div class="page-shell-mobile__display-none">
-                    <div class="page-shell-mobile__mb-16">
+                    <div class="mb-4">
                       <div class="flex">
                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
