--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -2126,7 +2126,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2168,7 +2168,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2210,7 +2210,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2252,7 +2252,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2313,7 +2313,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2373,7 +2373,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2415,7 +2415,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2457,7 +2457,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -2499,7 +2499,7 @@
                                                         >
                                                           <div class="_9342og">
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                               aria-hidden="true"
                                                             >
                                                               <span
@@ -7364,7 +7364,7 @@
                                       <div
                                         class="page-shell-mobile__display-none"
                                       >
-                                        <div class="page-shell-mobile__mb-16">
+                                        <div class="mb-4">
                                           <div class="flex">
                                             <span
                                               class="page-shell-mobile__lang-wrapper"
