--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -941,7 +941,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -967,7 +967,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -993,7 +993,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1019,7 +1019,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1057,7 +1057,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1094,7 +1094,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1120,7 +1120,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1146,7 +1146,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1172,7 +1172,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -4422,7 +4422,7 @@
                                   <span class="text-highlight dir dir-ltr">Footer section</span>
                                   <section>
                                     <div class="page-shell-mobile__display-none">
-                                      <div class="page-shell-mobile__mb-16">
+                                      <div class="mb-4">
                                         <div class="flex">
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
@@ -6312,7 +6312,7 @@
                                                       <div class="_c991cpe">
                                                         <div class="explore__list-full-wh">
                                                           <div class="_9342og">
-                                                            <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                            <div class="mb-4" aria-hidden="true">
                                                               <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false" style="
@@ -6338,7 +6338,7 @@
                                                       <div class="_c991cpe">
                                                         <div class="explore__list-full-wh">
                                                           <div class="_9342og">
-                                                            <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                            <div class="mb-4" aria-hidden="true">
                                                               <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false" style="
@@ -6364,7 +6364,7 @@
                                                       <div class="_c991cpe">
                                                         <div class="explore__list-full-wh">
                                                           <div class="_9342og">
-                                                            <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                            <div class="mb-4" aria-hidden="true">
                                                               <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false" style="
@@ -10854,7 +10854,7 @@
                                                                 </button></span>
                                                             </div>
                                                           </div>
-                                                          <div class="page-shell-mobile__mb-16">
+                                                          <div class="mb-4">
                                                             <div
                                                               class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                               <div>
@@ -13348,7 +13348,7 @@
                                                                 </button></span>
                                                             </div>
                                                           </div>
-                                                          <div class="page-shell-mobile__mb-16">
+                                                          <div class="mb-4">
                                                             <div
                                                               class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                               <div>
@@ -13842,7 +13842,7 @@
                                                                 </button></span>
                                                             </div>
                                                           </div>
-                                                          <div class="page-shell-mobile__mb-16">
+                                                          <div class="mb-4">
                                                             <div
                                                               class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                               <div>
@@ -15919,7 +15919,7 @@
                                 <span class="text-highlight dir dir-ltr">Footer section</span>
                                 <section>
                                   <div class="page-shell-mobile__display-none">
-                                    <div class="page-shell-mobile__mb-16">
+                                    <div class="mb-4">
                                       <div class="flex">
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
