--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -1541,7 +1541,7 @@
                           </span>
                           <section>
                             <div class="page-shell-mobile__display-none">
-                              <div class="page-shell-mobile__mb-16">
+                              <div class="mb-4">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper">
                                     <button
