--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -1547,7 +1547,7 @@
                                       <div
                                         class="page-shell-mobile__display-none"
                                       >
-                                        <div class="page-shell-mobile__mb-16">
+                                        <div class="mb-4">
                                           <div class="flex">
                                             <span
                                               class="page-shell-mobile__lang-wrapper"
@@ -3624,7 +3624,7 @@
                                                               </div>
                                                             </div>
                                                             <div
-                                                              class="page-shell-mobile__mb-16"
+                                                              class="mb-4"
                                                             >
                                                               <div
                                                                 class="reserve-container__rate-table-wrapper dir dir-ltr"
@@ -4480,7 +4480,7 @@
                                     <div
                                       class="page-shell-mobile__display-none"
                                     >
-                                      <div class="page-shell-mobile__mb-16">
+                                      <div class="mb-4">
                                         <div class="flex">
                                           <span
                                             class="page-shell-mobile__lang-wrapper"
