--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2761,7 +2761,7 @@
                                         <div
                                           class="page-shell-mobile__display-none"
                                         >
-                                          <div class="page-shell-mobile__mb-16">
+                                          <div class="mb-4">
                                             <div class="flex">
                                               <span
                                                 class="page-shell-mobile__lang-wrapper"
@@ -6813,7 +6813,7 @@
                                       <div
                                         class="page-shell-mobile__display-none"
                                       >
-                                        <div class="page-shell-mobile__mb-16">
+                                        <div class="mb-4">
                                           <div class="flex">
                                             <span
                                               class="page-shell-mobile__lang-wrapper"
