--- a/account/account-notifications.html
+++ b/account/account-notifications.html
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                               <div class="relative">
-                                <div class="page-shell-mobile__mb-16">
+                                <div class="mb-4">
                                   <section
                                     role="status"
                                     class="page-shell-mobile__alert-notification i144hzgs dir dir-ltr"
@@ -1930,7 +1930,7 @@
                           >
                           <section>
                             <div class="page-shell-mobile__display-none">
-                              <div class="page-shell-mobile__mb-16">
+                              <div class="mb-4">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
                                     ><button type="button" class="page-shell-mobile__lang-btn">
