--- a/account/personal-info.html
+++ b/account/personal-info.html
@@ -7980,7 +7980,7 @@
                           >
                           <section>
                             <div class="page-shell-mobile__display-none">
-                              <div class="page-shell-mobile__mb-16">
+                              <div class="mb-4">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
                                     ><button type="button" class="page-shell-mobile__lang-btn">
