--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1075,7 +1075,7 @@
                                             >
                                               <div class="_1wgf3yo">
                                                 <div
-                                                  class="page-shell-mobile__mb-16"
+                                                  class="mb-4"
                                                   style="
                                                     color: rgb(34, 34, 34);
                                                     font-size: 16px;
