--- a/edit/about.html
+++ b/edit/about.html
@@ -636,7 +636,7 @@
                                             <label for="about_host_input">
                                               <div class="_1wgf3yo">
                                                 <div
-                                                  class="page-shell-mobile__mb-16"
+                                                  class="mb-4"
                                                   style="
                                                     color: rgb(34, 34, 34);
                                                     font-size: 16px;
