--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -24626,7 +24626,7 @@
                           <span class="text-highlight dir dir-ltr">Footer section</span>
                           <section>
                             <div class="page-shell-mobile__display-none">
-                              <div class="page-shell-mobile__mb-16">
+                              <div class="mb-4">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr">Choose a language</span><span class="mr-2"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="
