--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -2834,7 +2834,7 @@ Harlem, New York City"
                       >
                       <section>
                         <div class="page-shell-mobile__display-none">
-                          <div class="page-shell-mobile__mb-16">
+                          <div class="mb-4">
                             <div class="flex">
                               <span class="page-shell-mobile__lang-wrapper"
                                 ><button
