--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1320,7 +1320,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q">
                                                               <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                               role="presentation" focusable="false"
@@ -1339,7 +1339,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q">
                                                               <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false"
@@ -4665,7 +4665,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                       <div
                                         class="page-shell-mobile__display-none"
                                       >
-                                        <div class="page-shell-mobile__mb-16">
+                                        <div class="mb-4">
                                           <div class="flex">
                                             <span
                                               class="page-shell-mobile__lang-wrapper"
@@ -10415,7 +10415,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                     <div
                                       class="page-shell-mobile__display-none"
                                     >
-                                      <div class="page-shell-mobile__mb-16">
+                                      <div class="mb-4">
                                         <div class="flex">
                                           <span
                                             class="page-shell-mobile__lang-wrapper"
