--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -774,7 +774,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -800,7 +800,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -826,7 +826,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -852,7 +852,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -890,7 +890,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -927,7 +927,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -953,7 +953,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -979,7 +979,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -1005,7 +1005,7 @@
                                                     <div class="_c991cpe">
                                                       <div class="explore__list-full-wh">
                                                         <div class="_9342og">
-                                                          <div class="page-shell-mobile__mb-16" aria-hidden="true">
+                                                          <div class="mb-4" aria-hidden="true">
                                                             <span class="_nvr5q"><svg viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                 role="presentation" focusable="false" style="
@@ -5987,7 +5987,7 @@
                                   <span class="text-highlight dir dir-ltr">Footer section</span>
                                   <section>
                                     <div class="page-shell-mobile__display-none">
-                                      <div class="page-shell-mobile__mb-16">
+                                      <div class="mb-4">
                                         <div class="flex">
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
@@ -12239,7 +12239,7 @@
                                                                 </button></span>
                                                             </div>
                                                           </div>
-                                                          <div class="page-shell-mobile__mb-16">
+                                                          <div class="mb-4">
                                                             <div
                                                               class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                               <div>
@@ -15753,7 +15753,7 @@
                                 <span class="text-highlight dir dir-ltr">Footer section</span>
                                 <section>
                                   <div class="page-shell-mobile__display-none">
-                                    <div class="page-shell-mobile__mb-16">
+                                    <div class="mb-4">
                                       <div class="flex">
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
