--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -4980,7 +4980,7 @@
                                   <span class="text-highlight dir dir-ltr">Footer section</span>
                                   <section>
                                     <div class="page-shell-mobile__display-none">
-                                      <div class="page-shell-mobile__mb-16">
+                                      <div class="mb-4">
                                         <div class="flex">
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
@@ -11184,7 +11184,7 @@
                                                                 </button></span>
                                                             </div>
                                                           </div>
-                                                          <div class="page-shell-mobile__mb-16">
+                                                          <div class="mb-4">
                                                             <div
                                                               class="reserve-container__rate-table-wrapper dir dir-ltr">
                                                               <div>
@@ -13959,7 +13959,7 @@
                                 <span class="text-highlight dir dir-ltr">Footer section</span>
                                 <section>
                                   <div class="page-shell-mobile__display-none">
-                                    <div class="page-shell-mobile__mb-16">
+                                    <div class="mb-4">
                                       <div class="flex">
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
