--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1692,7 +1692,7 @@
                           >
                           <section>
                             <div class="page-shell-mobile__display-none">
-                              <div class="page-shell-mobile__mb-16">
+                              <div class="mb-4">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
                                     ><button
