--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1645,7 +1645,7 @@
                       </span>
                       <section>
                         <div class="page-shell-mobile__display-none">
-                          <div class="page-shell-mobile__mb-16">
+                          <div class="mb-4">
                             <div class="flex">
                               <span class="page-shell-mobile__lang-wrapper">
                                 <button
