--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13258,7 +13258,7 @@
                 <div class="_17itzz4">
                   <div style="padding: 0px">
                     <div tabindex="0" class="_x0votz">
-                      <div class="_1a5fl1v">
+                      <div class="confirm-pay">
                         <div>
                           <div
                             style="
@@ -14453,7 +14453,7 @@
                 <div class="_1lplc7"></div>
                 <div class="_1jza0fl">
                   <div tabindex="0" class="_8pghme8">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div>
                         <div
                           style="
@@ -14671,7 +14671,7 @@
                 <div class="_17itzz4">
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
-                      <div class="_1a5fl1v">
+                      <div class="confirm-pay">
                         <div>
                           <div
                             style="
@@ -16310,7 +16310,7 @@
                 <div class="_17itzz4">
                   <div style="padding: 16px 0px 0px">
                     <div tabindex="0" class="_x0votz">
-                      <div class="_1a5fl1v">
+                      <div class="confirm-pay">
                         <div>
                           <div
                             style="
@@ -16524,7 +16524,7 @@
                     <path d="m6 6 20 20"></path>
                     <path d="m26 6-20 20"></path>
                   </svg></span></button></div>
-            <div class="_1a5fl1v">
+            <div class="confirm-pay">
               <div class="_3hmsj">
                 <div style="display: contents; --dls19-brand-color:var(--f-k-smk-x);">
                   <div class="_266d055">
