--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19776,7 +19776,7 @@
               <div class="_1lplc7"></div>
               <div class="_17itzz4" style="padding: 40px 24px 24px">
                 <div tabindex="0" class="_1seuw5go">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                             display: contents;
