--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -19151,7 +19151,7 @@
               <div class="_17itzz4">
                 <div style="padding: 0px">
                   <div tabindex="0" class="_x0votz">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div>
                         <div style="
                                   display: contents;
@@ -19921,7 +19921,7 @@
               <div class="_1lplc7"></div>
               <div class="_1jza0fl">
                 <div tabindex="0" class="_8pghme8">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                                 display: contents;
@@ -20087,7 +20087,7 @@
               <div class="_17itzz4">
                 <div style="padding: 16px 0px 0px">
                   <div tabindex="0" class="_x0votz">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div>
                         <div style="
                                   display: contents;
@@ -21226,7 +21226,7 @@
               <div class="_17itzz4">
                 <div style="padding: 16px 0px 0px">
                   <div tabindex="0" class="_x0votz">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div>
                         <div style="
                                   display: contents;
@@ -25347,7 +25347,7 @@
               <div class="_1lplc7"></div>
               <div class="_17itzz4" style="padding: 0px 24px">
                 <div tabindex="0" class="_1seuw5go">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                             display: contents;
@@ -26042,7 +26042,7 @@
               <div class="_1lplc7"></div>
               <div class="_1jza0fl">
                 <div tabindex="0" class="_8pghme8">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                             display: contents;
@@ -26206,7 +26206,7 @@
               <div class="_1lplc7"></div>
               <div class="_17itzz4" style="padding: 40px 24px 24px">
                 <div tabindex="0" class="_1seuw5go">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                             display: contents;
@@ -27309,7 +27309,7 @@
               <div class="_1lplc7"></div>
               <div class="_17itzz4" style="padding: 40px 24px 24px">
                 <div tabindex="0" class="_1seuw5go">
-                  <div class="_1a5fl1v">
+                  <div class="confirm-pay">
                     <div>
                       <div style="
                             display: contents;
@@ -27911,7 +27911,7 @@
                       <path d="m6 6 20 20"></path>
                       <path d="m26 6-20 20"></path>
                     </svg></span></button></div>
-              <div class="_1a5fl1v">
+              <div class="confirm-pay">
                 <div class="_3hmsj">
                   <div style="display: contents; --dls19-brand-color:var(--f-k-smk-x);">
                     <div class="_266d055">
