--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -22,7 +22,7 @@
               >
                 <div tabindex="-1" class="_1i7ccu91">
                   <div class="_1unac3l">
-                    <div class="_1a5fl1v">
+                    <div class="confirm-pay">
                       <div class="_3hmsj">
                         <div
                           style="
