--- a/payments/payment.html
+++ b/payments/payment.html
@@ -237,7 +237,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
-                        <div class="_1a5fl1v">
+                        <div class="confirm-pay">
                           <div class="_cne99n">
                             <div data-testid="payments-application">
                               <div style="min-height: 100vh">
